# Crew-Multi-Agents-System

./: README.md  env-style.txt  main.py  pyproject.toml
config/: settings.py
src/agents/: __init__.py  classifier_agent.py  general_agent.py  search_agent.py  weather_agent.py
src/crew/: __init__.py  main_crew.py
src/database/: __init__.py  migrations.py  sqlite_client.py
src/models/: __init__.py  schemas.py
src/tasks/: __init__.py  task_definitions.py
src/tools/: __init__.py  search_tool.py  weather_tool.py
