[project]
name = "crewagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "crewai[litellm]>=1.15.1",
    "langchain>=1.3.11",
    "langchain-openai>=1.3.3",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
]
